html, css and js validated, removed unecessary js and css files, updated TODO list
added all remaining tasks to TODO.txt, removed unecessary charts js and css, edited all html and css files to be compliant with the validators, Removed the locked lessons page and put the functionality of it onto the regular lessonshome page, other minor fixes

--- a/pokerapp/static/styles/lessons.css
+++ b/pokerapp/static/styles/lessons.css
@@ -22,7 +22,7 @@
 .tabcontent {
     color: white;
     display: none;
-    padding: 100px 20px;
+    padding: 20px 20px;
     height: 60%;
 }
 
@@ -49,6 +49,7 @@
 
 #submit-continue,
 #submit {
+    margin-top: 10px;
     visibility: hidden;
 }
 
