--- a/pokerapp/static/styles/login.css
+++ b/pokerapp/static/styles/login.css
@@ -31,6 +31,9 @@ div.logincontainer {
     background-color: rgb(153, 27, 27);
 }
 
+
+/* TODO make this better please, sincearly, the back-end boy */
+
 div.regcontainer {
     padding-right: 15px;
     padding-left: 15px;
