--- a/pokerapp/static/styles/custom.css
+++ b/pokerapp/static/styles/custom.css
@@ -1,4 +1,3 @@
-
 * {
     border-radius: 8px;
 }
@@ -11,7 +10,7 @@ body {
     background-color: black;
     text-align: center;
     font-family: 'Calibri';
-    margin:15px;
+    margin: 15px;
 }
 
 h1 {
@@ -73,12 +72,15 @@ p {
         font-size: 18px;
     }
 }
-footer{
+
+footer {
     margin: 55px;
 }
-.chart-card{
+
+.chart-card {
     opacity: 1;
 }
+
 
 /**kanes**/
 
@@ -86,9 +88,9 @@ footer{
     max-width: 960px;
 }
 
-.container-big{
-        max-width:1080px;
-        max-height: 800px;
+.container-big {
+    max-width: 1080px;
+    max-height: 800px;
 }
 
 
@@ -142,7 +144,7 @@ footer{
 .button {
     border: none;
     background-color: #555555;
-    padding: 15px, 32px;
+    padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -151,37 +153,34 @@ footer{
     cursor: pointer;
 }
 
-
-
-.card{
-    background-color: rgb(51, 153, 56);    
+.card {
+    background-color: rgb(51, 153, 56);
     margin: 15px;
     padding: 10px;
     border: 10px;
-      
 }
-.hightlight:hover, .hightlight:hover>a{
+
+.hightlight:hover,
+.hightlight:hover>a {
     text-decoration: none;
-    background-color: rgb(27, 104, 31); 
+    background-color: rgb(27, 104, 31);
 }
 
-.cardtop{
-    margin-top: 0px; 
+.cardtop {
+    margin-top: 0px;
 }
 
-
-.card-title{
+.card-title {
     color: black;
     font-size: 2.5rem;
     font-weight: 400;
     line-height: 1.2;
 }
 
-.card-text{
+.card-text {
     color: black;
-    font-size:1.25rem;
-    font-weight:300
-
+    font-size: 1.25rem;
+    font-weight: 300
 }
 
 .card-img-top {
@@ -191,7 +190,6 @@ footer{
     padding: 10%;
 }
 
-img{
+img {
     max-width: 500px;
 }
-
