--- a/pokerapp/templates/pokerlanding.html
+++ b/pokerapp/templates/pokerlanding.html
@@ -2,12 +2,10 @@
 
 
 <div class="position-relative overflow-hidden p-3 text-center">
-    <div class="responsive"
-        style="background-image: url('../static/homephoto.png'); background-repeat: no-repeat; background-position: 100% 100%;">
+    <div class="responsive" style="background-image: url('../static/homephoto.png'); background-repeat: no-repeat; background-position: 100% 100%;">
         <div class="col-md-5 p-lg-5 mx-auto">
             <h1 class="display-4 font-weight-normal header-main">Learn Poker</h1>
-            <p class="lead font-weight-normal subtitle-text">Poker done simply. Learn the starting hands and basics of
-                poker in under 10 minutes, click below to begin.</p>
+            <p class="lead font-weight-normal subtitle-text">Poker done simply. Learn the starting hands and basics of poker in under 10 minutes, click below to begin.</p>
             <a class="btn btn-outline-secondary" href="{{ url_for('lessons')}}">Begin Learning</a>
         </div>
     </div>
@@ -17,46 +15,42 @@
 <div class="card-group">
     <div class="card cardtop" style="border-radius: 8px">
         <div class="card-body">
-            
 
-            <h2 class="card-title">Challenge Yourself</h5>
-                <p class="card-text">See where you rank against other players with our results page.
-                </p>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Standard_deviation_diagram.svg/1280px-Standard_deviation_diagram.svg.png"
-                    alt="distibution graph" onclick="TODO" class="responsive" style = "max-width: 35vw;"></img>
+
+            <h2 class="card-title">Challenge Yourself</h2>
+            <p class="card-text">See where you rank against other players with our results page.
+            </p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Standard_deviation_diagram.svg/1280px-Standard_deviation_diagram.svg.png" alt="distibution graph" onclick="TODO" class="responsive" style="max-width: 35vw;">
         </div>
     </div>
     <div class="card cardtop" style="background-color: white;border-radius: 8px;">
         <div class="card-body">
             <h2 class="card-title">Interactive Learning Modules</h2>
-            <p class="card-text"style= "color:black;">Poker is a visual and interactive game, so learning it should be interactive to!</p>
-            <img src="https://cdn.dribbble.com/users/1981371/screenshots/6547432/poker_dribbble.gif"
-                alt="poker, flop turn and river" onclick="TODO" class="responsive" style = "max-width: 25vw;"></img>
+            <p class="card-text" style="color:black;">Poker is a visual and interactive game, so learning it should be interactive to!</p>
+            <img src="https://cdn.dribbble.com/users/1981371/screenshots/6547432/poker_dribbble.gif" alt="poker, flop turn and river" onclick="TODO" class="responsive" style="max-width: 25vw;">
         </div>
     </div>
 
 </div>
 
 <div class="card-group">
-    
+
     <div class="card bg-dark" style="border-radius: 8px;">
         <div class="card-body">
-            <h2 class="card-title" style="color:white">Perfect for Beginners</h5>
-                <p class="card-text" style="color:white">Learn the poker basics or quickly refresh your poker skills.</p>
-                <img src="https://www.legalbetting.com/app/uploads/2020/03/hero-img-poker.png"
-                    alt="poker table" onclick="TODO" class="responsive" style = "max-width: 35vw;"></img>
+            <h2 class="card-title" style="color:white">Perfect for Beginners</h2>
+            <p class="card-text" style="color:white">Learn the poker basics or quickly refresh your poker skills.</p>
+            <img src="https://www.legalbetting.com/app/uploads/2020/03/hero-img-poker.png" alt="poker table" onclick="TODO" class="responsive" style="max-width: 35vw;">
 
         </div>
     </div>
 
-    
+
 
     <div class="card" style=" border-radius: 8px; background-color:rgb(39, 42, 200)">
         <div class="card-body">
-            <h2 class="card-title" style = " color:white">Interactive Learning Modules</h2>
-            <p class="card-text" style = " color:white">Poker is a visual and interactive game, so learning it should be to!<br></p>
-            <img src="https://1ednx3tnfmz1xmk99kw15ns1-wpengine.netdna-ssl.com/wp-content/uploads/2019/05/flop-turn-river.png"
-                alt="poker, flop turn and river" onclick="TODO" class="responsive" style = "max-width: 35vw;"></img>
+            <h2 class="card-title" style=" color:white">Interactive Learning Modules</h2>
+            <p class="card-text" style=" color:white">Poker is a visual and interactive game, so learning it should be to!<br></p>
+            <img src="https://1ednx3tnfmz1xmk99kw15ns1-wpengine.netdna-ssl.com/wp-content/uploads/2019/05/flop-turn-river.png" alt="poker, flop turn and river" onclick="TODO" class="responsive" style="max-width: 35vw;">
         </div>
     </div>
 </div>
