Added some testing stuff
python unit tester

--- a/pokerapp/templates/500.html
+++ b/pokerapp/templates/500.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
-<h1>An unexpected error has occurred</h1>
-<p>The administrator has been notified. Sorry for the inconvenience!</p>
+<h1>An unexpected error has occurred!</h1>
+<p>The error has been logged. Please try again</p>
 <p><a href="{{ url_for('home') }}">Back</a></p>
 {% endblock %}
