--- a/pokerapp/templates/user.html
+++ b/pokerapp/templates/user.html
@@ -46,7 +46,7 @@
             labels: ['Lesson 1', 'Lesson 2', 'Lesson 3', 'Final Quiz'],
             datasets: [{
                 label: 'Your % Correct ',
-                data: [`{{userresult.quiz1}}`, `{{userresult.quiz2}}`, `{{userresult.quiz3}}`, `{{userresult.total}}`], //replace 50 with final quiz score
+                data: [`{{userresult.quiz1}}`, `{{userresult.quiz2}}`, `{{userresult.quiz3}}`, `{{userresult.finalquiz}}`], //replace 50 with final quiz score
                 backgroundColor: [
                     'rgba(255, 99, 132, 0.2)', //0.2 is translucency
                     'rgba(54, 162, 235, 0.2)',
