--- a/pokerapp/templates/Lessons/lesson1.html
+++ b/pokerapp/templates/Lessons/lesson1.html
@@ -2,8 +2,8 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/lessons.css') }}"> {% endblock %}{%block title %}Lesson 1{% endblock %}{% block script %}
 <script src="{{url_for('static', filename='js/quiz.js') }}"></script> {%endblock%}{% block content %}
 
-<button class="tablink" onclick="openPage('content', this, 'rgb(39, 42, 200)')" id="defaultOpen">Lesson 1</button>
-<button class="tablink" onclick="openPage('quiz2', this, 'green')">Quiz</button>
+
+<button class="tablink" onclick="openPage('content', this, 'rgb(39, 42, 200)'); changebackgroundblue();" id="defaultOpen">Lesson 1</button>
 
 
 <div id="content" class="tabcontent">
@@ -62,8 +62,8 @@
     </p>
     <img src="https://www.pngpix.com/wp-content/uploads/2016/11/PNGPIX-COM-Playing-Card-Symbols-PNG-Transparent-Image.png " class="responsive" alt="the 4 suits symbols">
     <!--add picture of four suits-->
-    <p><br> Each suit has thirteen cards. The cards have a numerical order. There are the "face" cards of ace, king, queen and jack. The ace acts as the number one. As well as the highest value in the suit. The jack acts as the eleventh card, the queen twelth
-        and king thirteenth.<br> </p>
+    <p><br> Each suit has thirteen cards. The cards have a numerical order. There are the "face" cards of ace, king, queen and jack. The ace can act as a number one but usally counts as the highest value in the suit. Following it, the king acts as the thirteenth card, the queen twelth
+        and jack eleventh.<br> </p>
 
     <div class="container">
         <div class="row">
@@ -86,46 +86,46 @@
         </div>
     </div>
 
-    <p><br> A suit also has the cards two, three, four, five, six, seven, eight, nine and ten. If you had the tenth card in the suit of clubs. It could be referred to as a "ten of clubs."
+    <p><br> A suit also has the cards two, three, four, five, six, seven, eight, nine and ten. These rank in their natural order of 2 through 10. If you had the tenth card in the suit of clubs. It could be referred to as a "ten of clubs".
         <br></p>
     <div class="container-fluid">
         <div class="row">
             <div class="col">
                 <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_10.png" onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_10.png'" onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_10.png'"
-                    alt="club-heart 10" style=" min-width: 75px;" />
+                    alt="club-heart 10" style=" min-width: 75px; max-width: 150px;" />
 
             </div>
             <div class="col">
                 <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_9.png" onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_9.png'" onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_9.png'"
-                    alt="club-heart 9" style=" min-width: 75px;" />
+                    alt="club-heart 9" style=" min-width: 75px; max-width: 150px;" />
             </div>
             <div class="col">
                 <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_8.png" onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_8.png'" onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_8.png'"
-                    alt="club-heart 8" style=" min-width: 75px;" />
+                    alt="club-heart 8" style=" min-width: 75px; max-width: 150px;" />
             </div>
             <div class="col">
                 <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_7.png" onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_7.png'" onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_7.png'"
-                    alt="club-heart 7" style=" min-width: 75px;" />
+                    alt="club-heart 7" style=" min-width: 75px; max-width: 150px;" />
             </div>
             <div class="col">
                 <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_6.png" onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_6.png'" onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_6.png'"
-                    alt="club-heart 6" style=" min-width: 75px;" />
+                    alt="club-heart 6" style=" min-width: 75px; max-width: 150px;" />
             </div>
             <div class="col">
                 <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_5.png" onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_5.png'" onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_5.png'"
-                    alt="club-heart 5" style="min-width: 75px;" />
+                    alt="club-heart 5" style="min-width: 75px; max-width: 150px;" />
             </div>
             <div class="col">
                 <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_4.png" onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_4.png'" onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_4.png'"
-                    alt="club-heart 4" style=" min-width: 75px;" />
+                    alt="club-heart 4" style=" min-width: 75px; max-width: 150px;" />
             </div>
             <div class="col">
                 <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_3.png" onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_3.png'" onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_3.png'"
-                    alt="club-heart 3" style=" min-width: 75px;" />
+                    alt="club-heart 3" style=" min-width: 75px; max-width: 150px;" />
             </div>
             <div class="col">
                 <img src="https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_2.png" onmouseover="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/hearts_2.png'" onmouseout="this.src='https://tekeye.uk/playing_cards/images/svg_playing_cards/fronts/png_96_dpi/clubs_2.png'"
-                    alt="club-heart 2" style=" min-width: 75px;" />
+                    alt="club-heart 2" style=" min-width: 75px; max-width: 150px;"  />
             </div>
         </div>
     </div>
@@ -135,7 +135,7 @@
 
 <div id="quiz2" class="tabcontent">
     <h2>Quiz 1: The Suits</h2>
-    <button id="Quiz1" class="btn btn-dark">Begin</button>
+    <button id="Quiz1" class="btn btn-dark">Click to Begin!</button>
     <div id="quiz"></div>
     <button id="submit" class="btn btn-dark">Mark Quiz</button>
     <div id="results" style="color: white;"></div>
@@ -145,5 +145,6 @@
         <p id="submit-continue"><input id="submit2" class="btn btn-dark" name="submit2" type="submit" value="Submit and Continue"> </p>
     </form>
 </div>
+<button class="tablink" onclick="openPage('quiz2', this, 'green');changebackgroundgreen();">Quiz</button>
 
 {% endblock %}
