--- a/pokerapp/templates/Lessons/lesson2.html
+++ b/pokerapp/templates/Lessons/lesson2.html
@@ -2,8 +2,8 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/lessons.css') }}"> {% endblock %}{%block title %}Lesson 2{% endblock %}{% block script %}
 <script src="{{url_for('static', filename='js/quiz.js') }}"></script> {%endblock%}{% block content %}
 
-<button class="tablink" onclick="openPage('content', this, 'rgb(39, 42, 200)')" id="defaultOpen">Lesson 2</button>
-<button class="tablink" onclick="openPage('quiz2', this, 'green')">Quiz</button>
+<button class="tablink" onclick="openPage('content', this, 'rgb(39, 42, 200)');changebackgroundblue();" id="defaultOpen">Lesson 2</button>
+
 
 <div id="content" class="tabcontent">
     <h3 class="display-4 font-weight-normal header-main">Hand Rankings</h3>
@@ -242,8 +242,9 @@
 </div>
 
 <div id="quiz2" class="tabcontent">
-    <h3>Quiz 2</h3>
-    <button id="Quiz2" class="btn btn-dark">Begin</button>
+    <h3>Quiz 2: Hand Rankings</h3>
+    
+    <button id="Quiz2" class="btn btn-dark">Click to Begin!</button>
     <div id="quiz"></div>
     <button id="submit" class="btn btn-dark">Mark Quiz</button>
     <div id="results" style="color: white;"></div>
@@ -254,4 +255,5 @@
     </form>
 </div>
 
+<button class="tablink" onclick="openPage('quiz2', this, 'green'); changebackgroundgreen();">Quiz</button>
 {% endblock %}
