--- a/pokerapp/templates/Lessons/lesson3.html
+++ b/pokerapp/templates/Lessons/lesson3.html
@@ -2,8 +2,8 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/lessons.css') }}"> {% endblock %}{%block title %}Lesson 2{% endblock %}{% block script %}
 <script src="{{url_for('static', filename='js/quiz.js') }}"></script> {%endblock%}{% block content %}
 
-<button class="tablink" onclick="openPage('content', this, 'rgb(39, 42, 200)')" id="defaultOpen">Lesson 3</button>
-<button class="tablink" onclick="openPage('quiz2', this, 'green')">Quiz</button>
+<button class="tablink" onclick="openPage('content', this, 'rgb(39, 42, 200)'); changebackgroundblue();" id="defaultOpen">Lesson 3</button>
+
 
 <div id="content" class="tabcontent">
     <h3 class="display-4 font-weight-normal header-main">The Game of Poker</h3>
@@ -41,7 +41,11 @@
     <br><br>
     <h4>&nbsp;Pre-Flop&nbsp;</h4>
     <br>
-    <p> Preflop explanation MUST INCLUDE REFERENCE TO IVEY LEAGUE FOR ANIMATIONS :https://www.youtube.com/watch?v=09jmSZ-lKRM TODO
+    <p> 
+        The PreFlop is the first stage of poker, this is where the players are all dealt 2 'hidden' cards. These cards
+        are kept hidden to all players except those to who they belong to. After being dealt these cards, 5 cards are added 
+        face up to the table (in the order shown below). A  player makes their hand.
+        Preflop explanation MUST INCLUDE REFERENCE TO IVEY LEAGUE FOR ANIMATIONS :https://www.youtube.com/watch?v=09jmSZ-lKRM TODO
     </p>
 
     <br><br>
@@ -49,24 +53,29 @@
     <br>
     <div class="container-fluid">
         <div class="row">
-            <div class="col">
+            <div class="col" style = "margin-left: 5px; margin-right: 5px;">
                 <img id="flopAnimate" src='../../static/lesson3animations/flop.jpg' style="min-width: 200px;" alt="flop animation">
-                <p>Hover to animate the flop.</p>
+                <p  class = "caption">Hover to animate the flop.</p>
+                <p>
+                    The flop is when the first 3 open cards are placed face up on the table.
+                </p>
             </div>
-            <div class="col ">
+            <div class="col" style = "margin-left: 5px; margin-right: 5px;">
                 <img id="turnAnimate" src='../../static/lesson3animations/turn.jpg' style="min-width: 200px;" alt="turn animation">
-                <p>Hover to animate the turn.</p>
+                <p  class = "caption">Hover to animate the turn.</p>
+                <p>The turn is the when the next, 4th, card is turned face up.</p>
             </div>
-            <div class="col">
+            <div class="col" style = "margin-left: 5px; margin-right: 5px;">
                 <img id="riverAnimate" src='../../static/lesson3animations/river.jpg' style="min-width: 200px;" alt="river animation">
-                <p>Hover to animate the river.</p>
+                <p class = "caption">Hover to animate the river.</p>
+                <p>The river is the 5th and final card.</p>
             </div>
         </div>
     </div>
 </div>
 <div id="quiz2" class="tabcontent">
-    <h3>Quiz 3</h3>
-    <button id="Quiz3" class="btn btn-dark">Begin</button>
+    <h3>Quiz 3: The Game</h3>
+    <button id="Quiz3" class="btn btn-dark">Click to Begin!</button>
     <div id="quiz"></div>
     <button id="submit" class="btn btn-dark">Mark Quiz</button>
     <div id="results" style="color: white;"></div>
@@ -76,5 +85,7 @@
         <p id="submit-continue"><input id="submit2" class="btn btn-dark" name="submit2" type="submit" value="Submit and Continue"> </p>
     </form>
 </div>
+
+<button class="tablink" onclick="openPage('quiz2', this, 'green'); changebackgroundgreen();">Quiz</button>
 
 {% endblock %}
