--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -69,7 +69,15 @@
             <div class="row">
 
                 <div class="col-lg-4 col-md-6 footer">
-                    <h5 style="color:rgb(153, 27, 27)">Features</h5>
+                    <h5 style="color:rgb(209, 204, 204)">References</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="TODO">Images</a></li>
+                        <li><a class="text-muted" href="TODO">Code</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-4 col-md-6 footer">
+                    <h5 style="color:rgb(209, 204, 204)">Features</h5>
                     <ul class="list-unstyled text-small">
                         <li><a class="text-muted" href="TODO">Login</a></li>
                         <li><a class="text-muted" href="TODO">Home</a></li>
@@ -77,18 +85,9 @@
                     </ul>
                 </div>
 
-                <div class="col-lg-4 col-md-6 footer">
-                    <h5 style="color:rgb(153, 27, 27)">Features</h5>
-                    <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="TODO">Login</a></li>
-                        <li><a class="text-muted" href="TODO">Home</a></li>
-                        <li><a class="text-muted" href="TODO">Lessons</a></li>
-                    </ul>
-                </div>
-
 
                 <div class="col-lg-4 col-md-6 footer">
-                    <h5 style="color:rgb(153, 27, 27)">Contact Us</h5>
+                    <h5 style="color:rgb(209, 204, 204)">Contact Us</h5>
                     <ul class="list-unstyled text-small">
                         <li><a class="text-muted" href="mailto:22710428@student.uwa.edu.au">Kane Alexander</a></li>
                         <li><a class="text-muted" href="mailto:22705507@student.uwa.edu.au">Jordan Lee</a></li>
