--- a/pokerapp/templates/register.html
+++ b/pokerapp/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block style %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> {% endblock %} {% block title %}Register{% endblock %}{% block content %}
 
-<div class="regcontainer">
+<div class="logincontainer regcontainer">
     <h2>Register</h2>
     <form action="#" method="post">
         {{ form.hidden_tag() }}
