--- a/pokerapp/static/styles/login.css
+++ b/pokerapp/static/styles/login.css
@@ -19,6 +19,19 @@ form {
     text-align: left;
     color: rgba(255, 255, 255, .5);
 }
+.submit{
+    outline: 0;
+    background-color: #536976;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    color: #FFFFFF;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+  
+}
 
 .logincontainer {
     padding-right: 15px;
@@ -27,13 +40,21 @@ form {
     margin-left: auto;
     width: 350px;
     height: 350px;
-    border-color: rgb(153, 27, 27);
-    background-color: rgb(153, 27, 27);
 }
-
-
-/* TODO make this better please, sincearly, the back-end boy */
 
 .regcontainer {
     height: 500px;
 }
+
+/* kanes funky shitt*/
+.input {
+    outline: 0;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    margin-left: 0px;
+    padding-right: 80px;
+    box-sizing: border-box;
+    font-size: 14px;
+    background: #f2f2f2;
+  }
