--- a/pokerapp/templates/login.html
+++ b/pokerapp/templates/login.html
@@ -1,26 +1,28 @@
 <!--Login Page-->
 {% extends "base.html" %} {% block style %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> {% endblock %} {% block title %}Login{% endblock %} {% block content %}
-<div class="logincontainer">
 
+<div class="logincontainer">
     <h2>Sign In</h2>
     <form action="#" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
             <!--Username-->
-            {{ form.username.label }}<br> {{ form.username(size=20) }}<br> {% for error in form.username.errors %}
+            <input id="username" class ="input" placeholder="username" name="username" required size="20" type="text" value=""><br> {% for error in form.username.errors %}
             <span style="color: red;">[{{ error }}]</span> {% endfor %}
         </p>
         <p>
             <!--Password entry-->
-            {{ form.password.label }}<br> {{ form.password(size=20) }}<br> {% for error in form.password.errors %}
+            <input id="password"  class ="input" placeholder="password" name="password" required size="20" type="password" value=""><br> {% for error in form.password.errors %}
             <span style="color: red;">[{{ error }}]</span> {% endfor %}
         </p>
         <!--Remember me checkbox-->
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit() }}</p>
+        <p><input id="submit" class= "submit" name="submit" type="submit" value="Sign In"></p>
     </form>
-</div>
-<!--Users need to register for lesson access-->
-<p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+    <!--Users need to register for lesson access-->
+    <p style = "font-size: 15px;">New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+</div> <br><br><br><br>
+
+
 {% endblock %}
