--- a/pokerapp/static/styles/lessons.css
+++ b/pokerapp/static/styles/lessons.css
@@ -1,8 +1,7 @@
-/* Style tab links */
-
 .tablink {
-    background-color: #555;
-    color: white;
+    /* style the links for the tabs*/
+    background-color: rgb(117, 117, 117);
+    color: whitesmoke;
     border: none;
     outline: none;
     cursor: pointer;
@@ -16,10 +15,8 @@
     background-color: #777;
 }
 
-
-/* Style the tab content (and add height:100% for full page content) */
-
 .tabcontent {
+    /* content of lessons page, only takes 60% of vertical screen */
     color: white;
     display: none;
     padding: 20px 20px;
@@ -27,6 +24,7 @@
 }
 
 #content {
+    /* gradient for the background image */
     background-color: #330000;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 400'%3E%3Cdefs%3E%3CradialGradient id='a' cx='396' cy='281' r='514' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%231b24a6'/%3E%3Cstop offset='1' stop-color='%23330000'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='400' y1='148' x2='400' y2='333'%3E%3Cstop offset='0' stop-color='%23FA3' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23FA3' stop-opacity='0.5'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='400'/%3E%3Cg fill-opacity='0.05'%3E%3Ccircle fill='url(%23b)' cx='267.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='532.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='400' cy='30' r='300'/%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
@@ -34,6 +32,7 @@
 }
 
 #quiz2 {
+    /* gradient for the background image */
     background-color: #330000;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 400'%3E%3Cdefs%3E%3CradialGradient id='a' cx='396' cy='281' r='514' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0' stop-color='%2317b34b'/%3E%3Cstop offset='1' stop-color='%23330000'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='400' y1='148' x2='400' y2='333'%3E%3Cstop offset='0' stop-color='%232b67ff' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%232b67ff' stop-opacity='0.5'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect fill='url(%23a)' width='800' height='400'/%3E%3Cg fill-opacity='0.04'%3E%3Ccircle fill='url(%23b)' cx='267.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='532.5' cy='61' r='300'/%3E%3Ccircle fill='url(%23b)' cx='400' cy='30' r='300'/%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
@@ -43,12 +42,14 @@
 #Quiz1,
 #Quiz2,
 #Quiz3 {
+    /* Quiz button visibility */
     visibility: visible;
     margin-top: 10px;
 }
 
 #submit-continue,
 #submit {
+    /* buttons hidden by default */
     margin-top: 10px;
     visibility: hidden;
 }
@@ -62,10 +63,8 @@ li.list-group-item {
     background-color: white;
 }
 
-
-/* style content page */
-
 .flipper {
+    /* css for the flipping cards */
     padding-left: 0px;
     padding-right: 0px;
     perspective: 1000px;
@@ -77,6 +76,7 @@ li.list-group-item {
 
 .front,
 .back {
+    /* css for the flipping cards */
     width: 100%;
     padding: 5px;
     backface-visibility: hidden;
