--- a/pokerapp/templates/user.html
+++ b/pokerapp/templates/user.html
@@ -1,3 +1,4 @@
+<!-- Special results for the individual user -->
 {% extends "base.html" %} {%block title%} Profile {%endblock%}{%block style %}
 <style>
     .chart-container {
