--- a/pokerapp/templates/404.html
+++ b/pokerapp/templates/404.html
@@ -1,4 +1,117 @@
-{% extends "base.html" %} {% block content %}
-<h1>Uh oh. File Not Found :(</h1>
-<p><a href="{{ url_for('home') }}">Back</a></p>
-{% endblock %}
+<!-- base page that all other pages extend from, contains navbar, footer, and necessary JS and CSS -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <!--Title with icons-->
+    <title>{% block title %}{% endblock %} - Poker Basics</title>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="https://toppng.com/uploads/preview/casino-cards-png-falling-poker-chips-11562995898mdvm5phghg.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/custom.css') }}"> {% block style %}{% endblock %}
+</head>
+
+<!-- flashes error messages as dialog box -->
+{% with messages = get_flashed_messages() %} {% if messages %}
+<script>
+    var messages = "{{ messages | safe }}";
+    alert(messages);
+</script>
+{% endif %} {% endwith %}
+
+<body>
+    <!--Jordan's cool navbar-->
+    <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
+        <a class="navbar-brand" href="{{ url_for('home') }}">
+            <img src='https://images.vexels.com/media/users/3/151229/isolated/preview/3fbd44975e2287324c2ee8d5f4017c67-spades-card-icon-by-vexels.png' width='30' style="height:auto;" alt="logo"> Poker Basics
+        </a>
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+                    </li>
+                    {% if current_user.is_anonymous %}
+                    <!--different if logged in or out-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <!--Profile Page will be "giving feedback to the user"-->
+                        <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
+                    </li>
+                    {% endif %}
+                    <li class="nav-item">
+                        <!--Link to lessons home page-->
+                        <a class="nav-link" href="{{url_for('lessons')}}" tabindex="-1">Lessons</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <!--link to page for aggregate data display-->
+                        <a class="nav-link" href="{{ url_for('stats')}}" tabindex="-1">Stats</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    {% block content %} {% endblock %}
+
+    <footer>
+        <!--Footer at bottom of page-->
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-4 col-md-6 footer">
+                    <h5 style="color:rgb(153, 27, 27)">Features</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="TODO">Login</a></li>
+                        <li><a class="text-muted" href="TODO">Home</a></li>
+                        <li><a class="text-muted" href="TODO">Lessons</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-4 col-md-6 footer">
+                    <h5 style="color:rgb(153, 27, 27)">Features</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="TODO">Login</a></li>
+                        <li><a class="text-muted" href="TODO">Home</a></li>
+                        <li><a class="text-muted" href="TODO">Lessons</a></li>
+                    </ul>
+                </div>
+
+
+                <div class="col-lg-4 col-md-6 footer">
+                    <h5 style="color:rgb(153, 27, 27)">Contact Us</h5>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="mailto:22710428@student.uwa.edu.au">Kane Alexander</a></li>
+                        <li><a class="text-muted" href="mailto:22705507@student.uwa.edu.au">Jordan Lee</a></li>
+                        <li><a class="text-muted" href="mailto:22704832@student.uwa.edu.au">Jake Lyell</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+        <div>
+            <a class="text-muted text-center" href="https://teaching.csse.uwa.edu.au/units/CITS3403/">2021 Agile Web
+                Development Project</a>
+        </div>
+    </footer>
+
+    <!--Optimisation scripts-->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js" integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin="anonymous"></script>
+    {%block script%} {%endblock%}
+</body>
+
+</html>
