--- a/pokerapp/templates/pokerlanding.html
+++ b/pokerapp/templates/pokerlanding.html
@@ -1,6 +1,7 @@
+<!-- The main landing page for the site -->
 {% extends "base.html"%} {%block title%}Home{%endblock%} {% block content %}
 
-
+<!-- The top banner -->
 <div class="position-relative overflow-hidden p-3 text-center">
     <div class="responsive" style="background-image: url('../static/homephoto.png'); background-repeat: no-repeat; background-position: 100% 100%;">
         <div class="col-md-5 p-lg-5 mx-auto">
@@ -11,7 +12,7 @@
     </div>
 </div>
 
-
+<!-- 4 cards containing information -->
 <div class="card-group">
     <div class="card cardtop" style="border-radius: 8px">
         <div class="card-body">
