--- a/pokerapp/templates/register.html
+++ b/pokerapp/templates/register.html
@@ -1,3 +1,4 @@
+<!-- Page for registering a new account -->
 {% extends "base.html" %} {% block style %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> {% endblock %} {% block title %}Register{% endblock %}{% block content %}
 
