fixed lesson 3, updated todo list

--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -23,12 +23,12 @@
 <!-- The navbar used for navigation across all pages -->
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
+    <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(122, 21, 21);">
         <a class="navbar-brand" href="{{ url_for('home') }}">
             <img src='https://images.vexels.com/media/users/3/151229/isolated/preview/3fbd44975e2287324c2ee8d5f4017c67-spades-card-icon-by-vexels.png' width='30' style="height:auto;" alt="logo"> Poker Basics
         </a>
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
