--- a/pokerapp/templates/user.html
+++ b/pokerapp/templates/user.html
@@ -8,10 +8,10 @@
     }
 </style>{%endblock%}{% block content %}
 
-<h1>User: {{ user.username }}</h1>
-<p>
-    {{ user.username }} Your Results:
-</p>
+<div class = 'container-user'>
+<h1> Welcome: {{ user.username }}</h1>
+<p> Here Are Your Results: { user.username }} </p>
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js" integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin="anonymous"></script>
 
 
