--- a/pokerapp/static/styles/custom.css
+++ b/pokerapp/static/styles/custom.css
@@ -20,6 +20,8 @@ h1 {
     /* white headings */
     color: white;
     text-align: center;
+    font-family: "Sans Serif    ";
+    font-size: 30px;
 }
 
 audio {
@@ -71,6 +73,12 @@ footer {
 
 .container {
     max-width: 960px;
+}
+
+.container-user {
+    max-height: 60px;
+    border-color: #e5e5e5;
+
 }
 
 .container-big {
