--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -27,12 +27,13 @@
         <a class="navbar-brand" href="{{ url_for('home') }}">
             <img src='https://images.vexels.com/media/users/3/151229/isolated/preview/3fbd44975e2287324c2ee8d5f4017c67-spades-card-icon-by-vexels.png' width='30' style="height:auto;" alt="logo"> Poker Basics
         </a>
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+        
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="container-fluid"> 
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ol class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('home') }}">Home</a>
                     </li>
@@ -59,7 +60,7 @@
                         <!--link to page for aggregate data display-->
                         <a class="nav-link" href="{{ url_for('stats')}}" tabindex="-1">Stats</a>
                     </li>
-                </ul>
+                </ol>
             </div>
         </div>
     </nav>
