--- a/pokerapp/templates/stats.html
+++ b/pokerapp/templates/stats.html
@@ -9,6 +9,8 @@
 </style> {%endblock%}{% block content %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.min.js" integrity="sha512-VMsZqo0ar06BMtg0tPsdgRADvl0kDHpTbugCBBrL55KmucH6hP9zWdLIWY//OTfMnzz6xWQRxQqsUFefwHuHyg==" crossorigin="anonymous"></script>
 
+<h1>Aggregate Results and Usage Statistics</h1>
+
 <!-- Interactive charts containing data -->
 <div class='container'>
     <div class='row'>
